--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -93,25 +93,25 @@
                 <p><?php echo $this->__('Unsere starken Gastro-Marken') ?></p>
                 <ul>
                     <li>
-                        <a href="<?php echo Mage::getUrl('rational'); ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/rational'); ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('winterhalter'); ?>"><?php echo $this->__('Winterhalter Spülmaschinen') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/winterhalter'); ?>"><?php echo $this->__('Winterhalter Spülmaschinen') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('jura'); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/jura'); ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('panasonic'); ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/panasonic'); ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('hoshizaki'); ?>"><?php echo $this->__('Hoshizaki Eiswürfelbereiter') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/hoshizaki'); ?>"><?php echo $this->__('Hoshizaki Eiswürfelbereiter') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('marken'); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller'); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
                     </li>
                 </ul>
             </div>
