change checkout WH

--- a/app/design/frontend/foundation/default/template/checkout/cart.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart.phtml
@@ -44,6 +44,10 @@
             </ul>
         <?php endif; ?>
     </div>
+    <div class="callout alert">
+        <h5>Gastrodax wünscht allen Kunden ein besinnliches Weihnachtsfest und einen guten Start ins Jahr 2018.</h5>
+        <p>Bitte bedenken Sie, dass es feiertagsbedingt zu Lieferverzögerungen kommen kann.</p>
+    </div>
     <?php echo $this->getMessagesBlock()->toHtml() ?>
     <?php echo $this->getChildHtml('form_before') ?>
     <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
