--- a/app/design/frontend/foundation/default/template/catalog/product/top.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/top.phtml
@@ -62,10 +62,10 @@ $_helper = $this->helper('catalog/output');
         <?php $_collectionSize = $_productCollection->count() ?>
         <?php $_columnCount = $this->getColumnCount(); ?>
         <?php $i = 0; ?>
-        <ul class="top-products-slider products-grid owl-carousel owl-theme row small-up-1 medium-up-4 large-up-6">
+        <div class="top-products-slider products-grid owl-carousel owl-theme row small-up-1 medium-up-4 large-up-6">
             <?php $i = 0;
             foreach ($_productCollection as $_product): ?>
-                <li class="item">
+                <div class="item">
                     <div class="content">
                         <h3 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
                                                     title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
@@ -107,8 +107,8 @@ $_helper = $this->helper('catalog/output');
                             <?php //echo $this->getPriceHtml($_product, true) ?>
                         </div>
                     </div>
-                </li>
+                </div>
             <?php endforeach ?>
-        </ul>
+        </div>
     </div>
 <?php endif; ?>
