--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -1,5 +1,7 @@
 //Toolbar
 .toolbar, .toolbar-3 {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
   .amount, .limiter, .sort-by {
     p, .input-group {
       @media screen and #{breakpoint(medium)}{
@@ -31,7 +33,6 @@
 .toolbar-bottom {
   margin-top: 1rem;
   padding-top: 1rem;
-  border-top: 1px solid $medium-gray;
 }
 
 .toolbar, .toolbar-3 {
@@ -75,11 +76,10 @@
 //Products list
 .products-list, .products-grid, .top-products-slider, .gift-grid {
   .item, .column {
+    padding: .5rem;
+    border: 1px solid $medium-gray;
+    cursor: pointer;
     .content {
-      margin-top: 1rem;
-      padding-top: 1rem;
-      border-top: 1px solid $medium-gray;
-      cursor: pointer;
       text-align: center;
       h3.product-name {
         margin: 0;
@@ -96,6 +96,13 @@
         justify-content: center;
         align-items: center;
       }
+    }
+    &:hover, &:focus {
+      border: 1px solid $dark-gray;
+      -moz-box-shadow:1px 1px 6px #a0a0a0;
+      -webkit-box-shadow:1px 1px 6px #a0a0a0;
+      -khtml-box-shadow:1px 1px 6px #a0a0a0;
+      box-shadow:1px 1px 6px #a0a0a0;
     }
   }
 }
