--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -41,35 +41,47 @@
   }
 }
 
-//Category
-.categories-grid {
-  text-align: center;
-  img {
-    padding-bottom: $global-margin;
-  }
-  h3 {
-    font-size: rem-calc(18);
-    font-style: italic;
-    font-weight: 600;
+//Category & Manufacturers
+.categories-grid, .manufacturers-grid {
+  li {
+    padding: .5rem;
+    border: 1px solid $medium-gray;
+    cursor: pointer;
+    text-align: center;
+    img {
+      padding-bottom: $global-margin;
+      -moz-transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+    h3 {
+      margin: 0;
+      font-size: rem-calc(15);
+      line-height: 1rem;
+      word-wrap: break-word;
+    }
+    &:hover, &:focus {
+      border: 1px solid $dark-gray;
+      -moz-box-shadow: 1px 1px 6px #a0a0a0;
+      -webkit-box-shadow: 1px 1px 6px #a0a0a0;
+      -khtml-box-shadow: 1px 1px 6px #a0a0a0;
+      box-shadow: 1px 1px 6px #a0a0a0;
+      img {
+        -moz-transform: scale(1.05);
+        -webkit-transform: scale(1.05);
+        transform: scale(1.05);
+      }
+    }
   }
 }
 
-//Manufacturers
-.manufacturers-grid {
-  li {
-    border: 1px solid $medium-gray;
-    border-radius: $global-radius;
-    text-align: center;
-    h3 {
-      text-indent: -100000rem;
-      line-height: 0;
-      margin: 0;
-    }
-    margin-bottom: $global-margin;
-    &:hover {
-      border-style: dashed;
-      border-color: $primary-color;
-    }
+.manufacturers-grid li {
+  h3 {
+    text-indent: -100000rem;
+    line-height: 0;
+  }
+  img {
+    padding: 0;
   }
 }
 
@@ -83,6 +95,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    .products-image img {
+      -moz-transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+    }
     h3.product-name {
       margin: 0;
       font-size: rem-calc(15);
@@ -95,6 +112,11 @@
       -webkit-box-shadow: 1px 1px 6px #a0a0a0;
       -khtml-box-shadow: 1px 1px 6px #a0a0a0;
       box-shadow: 1px 1px 6px #a0a0a0;
+      .products-image img {
+        -moz-transform: scale(1.05);
+        -webkit-transform: scale(1.05);
+        transform: scale(1.05);
+      }
     }
   }
 }
