--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -1,11 +1,11 @@
 <?php
 $_categories = $this->getCurrentChildCategories(); ?>
-<ul class="categories-grid">
+<ul class="categories-grid" data-equalizer data-equalize-on="medium">
     <?php $i=0; ?>
     <?php foreach ($_categories as $_category): ?>
         <?php if ($_category->getIsActive()): ?>
             <?php $_category = Mage::getModel("catalog/category")->load($_category->getEntityId()); ?>
-            <li>
+            <li data-equalizer-watch>
                 <div class="category-image">
                     <a href="<?php echo $_category->getURL() ?>"
                        title="<?php echo $this->htmlEscape($_category->getName()) ?>">
@@ -22,7 +22,7 @@ $_categories = $this->getCurrentChildCategories(); ?>
         <?php endif; ?>
         <?php $i++; ?>
     <?php endforeach; ?>
-    <li>
+    <li data-equalizer-watch>
         <div class="category-image">
             <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"
                title="Bartscher Shop">
@@ -34,7 +34,7 @@ $_categories = $this->getCurrentChildCategories(); ?>
             </h3>
         </div>
     </li>
-    <li>
+    <li data-equalizer-watch>
         <div class="category-image">
             <a href="<?php echo Mage::getUrl('hersteller/aliseo'); ?>"
                title="Aliseo Profishop">
