add newsletter link to footer

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -1,6 +1,6 @@
 <?php
 $_categories = $this->getCurrentChildCategories(); ?>
-<ul class="categories-grid" data-equalizer data-equalize-on="medium">
+<ul class="categories-home-grid" data-equalizer data-equalize-on="medium">
     <?php $i=0; ?>
     <?php foreach ($_categories as $_category): ?>
         <?php if ($_category->getIsActive()): ?>
