--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -124,6 +124,10 @@
                 <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
                      alt="kostenfreie Lieferung ab 99 EUR">
             </a>
+            <a href="<?php echo Mage::getUrl('newsletter'); ?>">
+                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/newsletter.png' ?>"
+                     alt="kostenfreier Newsletter">
+            </a>
         </div>
     </div>
     <div class="footer-payments">
