--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -145,7 +145,7 @@ header {
   }
 }
 
-.categories-grid, .manufacturers-grid {
+.categories-grid, .categories-home-grid, .manufacturers-grid {
   @include xy-grid-container;
   @include xy-grid;
   @include xy-grid-layout(2, 'li', true, $grid-margin-gutters, margin, left bottom);
@@ -454,7 +454,7 @@ footer {
     }
   }
 
-  .categories-grid, .manufacturers-grid {
+  .categories-grid, .categories-home-grid, .manufacturers-grid {
     @include xy-grid-layout(4, 'li', true, $grid-margin-gutters, margin, left bottom);
   }
 
@@ -648,7 +648,7 @@ footer {
     }
   }
 
-  .categories-grid, .manufacturers-grid {
+  .categories-home-grid, .manufacturers-grid {
     @include xy-grid-layout(5, 'li', true, $grid-margin-gutters, margin, left bottom);
   }
 
