--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -6,6 +6,18 @@
             </div>
         </a>
     </div>
+    <div class="footer-extras">
+        <div class="content">
+            <a href="<?php echo Mage::getUrl('lieferung'); ?>">
+                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
+                     alt="kostenfreie Lieferung ab 99 EUR">
+            </a>
+            <a href="<?php echo Mage::getUrl('newsletter'); ?>">
+                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/newsletter.png' ?>"
+                     alt="kostenfreier Newsletter">
+            </a>
+        </div>
+    </div>
     <div class="footer-info">
         <div class="content">
             <div class="footer_links">
@@ -116,18 +128,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="footer-shipping">
-        <div class="content">
-            <a href="<?php echo Mage::getUrl('lieferung'); ?>">
-                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
-                     alt="kostenfreie Lieferung ab 99 EUR">
-            </a>
-            <a href="<?php echo Mage::getUrl('newsletter'); ?>">
-                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/newsletter.png' ?>"
-                     alt="kostenfreier Newsletter">
-            </a>
         </div>
     </div>
     <div class="footer-payments">
