--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -74,6 +74,7 @@ $foundation-palette: (
         success: #008B00,
         warning: #FFA500,
         alert: #ec5840,
+        follower: #ed4a00
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
