--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -47,8 +47,9 @@
       }
       .follower {
         color: $white;
-        font-weight: bold;
+        font-weight: 700;
         margin: 0;
+        font-size: 1rem;
       }
     }
     .product-img-box {
