add small changes

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -124,6 +124,21 @@
                         <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a>
                     </li>
                     <li>
+                        <a href="<?php echo Mage::getUrl('hersteller/cool-compact'); ?>"><?php echo $this->__('Cool Compact Kühltische') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('hersteller/vaihinger-sanomat'); ?>"><?php echo $this->__('Sanomat Sahnemaschinen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('hersteller/seltmann-weiden'); ?>"><?php echo $this->__('Seltmann Weiden Geschirr') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('hersteller/brita-professional'); ?>"><?php echo $this->__('Brita Wasserfilter') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('hersteller/eku'); ?>"><?php echo $this->__('EKU Großküchentechnik') ?></a>
+                    </li>
+                    <li>
                         <a href="<?php echo Mage::getUrl('hersteller'); ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
                     </li>
                 </ul>
