add small changes

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -43,6 +43,7 @@
 
 //Category & Manufacturers
 .categories-grid, .categories-home-grid, .manufacturers-grid {
+  padding-top: .5rem;
   li {
     padding: .5rem;
     border: 1px solid $medium-gray;
