add small changes

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -42,7 +42,7 @@
                         </li>
                     <?php endif ?>
                     <li>
-                        <a href="<?php echo Mage::getUrl('batteriegesetz'); ?>"><?php echo $this->__('Hinweis nach dem Batteriegesetz') ?></a>
+                        <a href="<?php echo Mage::getUrl('batteriegesetz'); ?>"><?php echo $this->__('Batteriegesetz') ?></a>
                     </li>
                     <li><a href="<?php echo Mage::getUrl('referenzen'); ?>"><?php echo $this->__('Referenzen') ?></a>
                     </li>
@@ -121,7 +121,7 @@
                         <a href="<?php echo Mage::getUrl('hersteller/hoshizaki'); ?>"><?php echo $this->__('Hoshizaki Eiswürfelbereiter') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"><?php echo $this->__('Bartscher Gastronomiebedarf') ?></a>
+                        <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"><?php echo $this->__('Bartscher Gastrotechnik') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('hersteller/cool-compact'); ?>"><?php echo $this->__('Cool Compact Kühltische') ?></a>
