add small changes

--- a/skin/frontend/foundation/default/src/assets/scss/app.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/app.scss
@@ -59,6 +59,7 @@
 
 @import "custom/account";
 @import "custom/alerts";
+@import "custom/breadcrumb";
 @import "custom/browser";
 @import "custom/buttons";
 @import "custom/cart";
